--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Yanbo Fang"
 title_separator          : "-"
 name                     : &name "Yanbo Fang"
 description              : &description "Interested in NLP"
-url                      : https://yanbo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kz209.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "kz209/yanbo.github.io"
+repository               : "kz209/kz209.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
