--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanbo"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Interested in NLP"
   location         : "New Jersey"
   employer         :
