--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yanbo"
   avatar           : "profile.jpg"
-  bio              : "Interested in NLP"
+  bio              : "AI/NLP"
   location         : "New Jersey"
   employer         :
   pubmed           : 
